add some content

--- a/slides/MakerWorld2014/raspberrypijam.tex
+++ b/slides/MakerWorld2014/raspberrypijam.tex
@@ -30,211 +30,154 @@
 \tableofcontents
 \end{frame} 
 
+\input{include/20_arduino_vs_rasppi} 
+\input{include/50_arduino_zukunft}
+\input{include/80_gemeinsam_stark}
+\input{include/99_ende}
 
-\section{Arduino vs. RaspberryPi} 
+%\begin{frame}\frametitle{unnumbered lists}
+%\begin{itemize}
+%\item Introduction to  \LaTeX  
+%\item Course 2 
+%\item Termpapers and presentations with \LaTeX 
+%\item Beamer class
+%\end{itemize} 
+%\end{frame}
 
-\begin{frame}
-\frametitle{Worin unterscheiden sich die beiden Bastlerplatinen?} 
-Auf den ersten Blick bietet der Raspberry Pi mehr als 1000 mal soviel Rechenleistung wie ein Arduino Uno für zehn Euro Aufpreis. Da fällt die Entscheidung leicht, oder?
+%\begin{frame}\frametitle{lists with pause}
+%\begin{itemize}
+%\item Introduction to  \LaTeX \pause 
+%\item Course 2 \pause 
+%\item Termpapers and presentations with \LaTeX \pause 
+%\item Beamer class
+%\end{itemize} 
+%\end{frame}
 
-Sehen wir uns die Unterschiede doch einmal näher an:
-\end{frame}
+%\subsection{Lists II}
+%\begin{frame}\frametitle{numbered lists}
+%\begin{enumerate}
+%\item Introduction to  \LaTeX  
+%\item Course 2 
+%\item Termpapers and presentations with \LaTeX 
+%\item Beamer class
+%\end{enumerate}
+%\end{frame}
 
-\subsection{Technische Daten}
-\begin{frame}
-\frametitle{Speicher und Rechenleistung} 
-\end{frame}
-
-\begin{frame}
-\frametitle{IO und Buses} 
-\end{frame}
-
-\begin{frame}
-\frametitle{Interrupts} 
-\end{frame}
-
-\begin{frame}
-\frametitle{Leistungsaufnahme} 
-\end{frame}
-
-\subsection{Einsatzbereiche}
-
-\begin{frame}
-\frametitle{Arduino} 
-\end{frame}
-
-\begin{frame}
-\frametitle{Raspberry Pi} 
-\end{frame}
-
-\section{Die Arduino-Zukunft}
-
-\subsection{,,Starke'' Arduinos mit Linux}
-\subsection{Neue Microcontroller mit ARM-Kern}
-
-\section{Gemeinsam stark!}
-
-\subsection{Raspberry Pi mit Arduino huckepack}
-\subsection{Raspberry Pi als Zentrale}
-
-
-%\subsection{Subsection no.1.1  }
-
-\begin{frame} 
-Without title somethink is missing. 
-\end{frame}
-
-
-%\section{Section no. 2} 
-%\subsection{Lists I}
-\begin{frame}\frametitle{unnumbered lists}
-\begin{itemize}
-\item Introduction to  \LaTeX  
-\item Course 2 
-\item Termpapers and presentations with \LaTeX 
-\item Beamer class
-\end{itemize} 
-\end{frame}
-
-\begin{frame}\frametitle{lists with pause}
-\begin{itemize}
-\item Introduction to  \LaTeX \pause 
-\item Course 2 \pause 
-\item Termpapers and presentations with \LaTeX \pause 
-\item Beamer class
-\end{itemize} 
-\end{frame}
-
-\subsection{Lists II}
-\begin{frame}\frametitle{numbered lists}
-\begin{enumerate}
-\item Introduction to  \LaTeX  
-\item Course 2 
-\item Termpapers and presentations with \LaTeX 
-\item Beamer class
-\end{enumerate}
-\end{frame}
-
-\begin{frame}\frametitle{numbered lists with pause}
-\begin{enumerate}
-\item Introduction to  \LaTeX \pause 
-\item Course 2 \pause 
-\item Termpapers and presentations with \LaTeX \pause 
-\item Beamer class
-\end{enumerate}
-\end{frame}
+%\begin{frame}\frametitle{numbered lists with pause}
+%\begin{enumerate}
+%\item Introduction to  \LaTeX \pause 
+%\item Course 2 \pause 
+%\item Termpapers and presentations with \LaTeX \pause 
+%\item Beamer class
+%\end{enumerate}
+%\end{frame}
 
 %\section{Section no.3} 
 %\subsection{Tables}
-\begin{frame}\frametitle{Tables}
-\begin{tabular}{|c|c|c|}
-\hline
-\textbf{Date} & \textbf{Instructor} & \textbf{Title} \\
-\hline
-WS 04/05 & Sascha Frank & First steps with  \LaTeX  \\
-\hline
-SS 05 & Sascha Frank & \LaTeX \ Course serial \\
-\hline
-\end{tabular}
-\end{frame}
+%\begin{frame}\frametitle{Tables}
+%\begin{tabular}{|c|c|c|}
+%\hline
+%\textbf{Date} & \textbf{Instructor} & \textbf{Title} \\
+%\hline
+%WS 04/05 & Sascha Frank & First steps with  \LaTeX  \\
+%\hline
+%SS 05 & Sascha Frank & \LaTeX \ Course serial \\
+%\hline
+%\end{tabular}
+%\end{frame}
 
 
-\begin{frame}\frametitle{Tables with pause}
-\begin{tabular}{c c c}
-A & B & C \\ 
-\pause 
-1 & 2 & 3 \\  
-\pause 
-A & B & C \\ 
-\end{tabular} 
-\end{frame}
-
+%\begin{frame}\frametitle{Tables with pause}
+%\begin{tabular}{c c c}
+%A & B & C \\ 
+%\pause 
+%1 & 2 & 3 \\  
+%\pause 
+%A & B & C \\ 
+%\end{tabular} 
+%\end{frame}
 
 %\section{Section no. 4}
 %\subsection{blocs}
-\begin{frame}\frametitle{blocs}
+%\begin{frame}\frametitle{blocs}
 
-\begin{block}{title of the bloc}
-bloc text
-\end{block}
+%\begin{block}{title of the bloc}
+%bloc text
+%\end{block}
 
-\begin{exampleblock}{title of the bloc}
-bloc text
-\end{exampleblock}
+%\begin{exampleblock}{title of the bloc}
+%bloc text
+%\end{exampleblock}
 
-
-\begin{alertblock}{title of the bloc}
-bloc text
-\end{alertblock}
-\end{frame}
+%\begin{alertblock}{title of the bloc}
+%bloc text
+%\end{alertblock}
+%\end{frame}
 
 %\section{Section no. 5}
 %\subsection{split screen}
 
-\begin{frame}\frametitle{splitting screen}
-\begin{columns}
-\begin{column}{5cm}
-\begin{itemize}
-\item Beamer 
-\item Beamer Class 
-\item Beamer Class Latex 
-\end{itemize}
-\end{column}
-\begin{column}{5cm}
-\begin{tabular}{|c|c|}
-\hline
-\textbf{Instructor} & \textbf{Title} \\
-\hline
-Sascha Frank &  \LaTeX \ Course 1 \\
-\hline
-Sascha Frank &  Course serial  \\
-\hline
-\end{tabular}
-\end{column}
-\end{columns}
-\end{frame}
+%\begin{frame}\frametitle{splitting screen}
+%\begin{columns}
+%\begin{column}{5cm}
+%\begin{itemize}
+%\item Beamer 
+%\item Beamer Class 
+%\item Beamer Class Latex 
+%\end{itemize}
+%\end{column}
+%\begin{column}{5cm}
+%\begin{tabular}{|c|c|}
+%\hline
+%\textbf{Instructor} & \textbf{Title} \\
+%\hline
+%Sascha Frank &  \LaTeX \ Course 1 \\
+%\hline
+%Sascha Frank &  Course serial  \\
+%\hline
+%\end{tabular}
+%\end{column}
+%\end{columns}
+%\end{frame}
 
-\subsection{Pictures} 
-\begin{frame}\frametitle{pictures in latex beamer class}
-\begin{figure}
+%\subsection{Pictures} 
+%\begin{frame}\frametitle{pictures in latex beamer class}
+%\begin{figure}
 % \includegraphics[scale=0.5]{PIC1} 
-\caption{show an example picture}
-\end{figure}
-\end{frame}
+%\caption{show an example picture}
+%\end{figure}
+%\end{frame}
 
-\subsection{joining picture and lists} 
+%\subsection{joining picture and lists} 
 
-\begin{frame}
-\frametitle{pictures and lists in beamer class}
-\begin{columns}
-\begin{column}{5cm}
-\begin{itemize}
-\item<1-> subject 1
-\item<3-> subject 2
-\item<5-> subject 3
-\end{itemize}
-\vspace{3cm} 
-\end{column}
-\begin{column}{5cm}
-\begin{overprint}
+%\begin{frame}
+%\frametitle{pictures and lists in beamer class}
+%\begin{columns}
+%\begin{column}{5cm}
+%\begin{itemize}
+%\item<1-> subject 1
+%\item<3-> subject 2
+%\item<5-> subject 3
+%\end{itemize}
+%\vspace{3cm} 
+%\end{column}
+%\begin{column}{5cm}
+%\begin{overprint}
 %\includegraphics<2>{PIC1}
 %\includegraphics<4>{PIC2}
 %\includegraphics<6>{PIC3}
-\end{overprint}
-\end{column}
-\end{columns}
-\end{frame}
+%\end{overprint}
+%\end{column}
+%\end{columns}
+%\end{frame}
 
-
-\subsection{pictures which need more space} 
-\begin{frame}[plain]
-\frametitle{plain, or a way to get more space}
-\begin{figure}
+%\subsection{pictures which need more space} 
+%\begin{frame}[plain]
+%\frametitle{plain, or a way to get more space}
+%\begin{figure}
 % \includegraphics[scale=0.5]{PIC1} 
-\caption{show an example picture}
-\end{figure}
-\end{frame}
-
-
+%\caption{show an example picture}
+%\end{figure}
+%\end{frame}
 
 \end{document}
