add some content

--- a/slides/MakerWorld2014/include/20_arduino_vs_rasppi.tex
+++ b/slides/MakerWorld2014/include/20_arduino_vs_rasppi.tex
@@ -49,9 +49,9 @@ Arduino heisst in diesem Kontext Atmega328P, Raspberry Pi meint das Model B...
 \begin{tabular}{c c c c}
 \textbf{Plattform} & \textbf{Arduino} & \textbf{Raspberry Pi} & \textbf{Faktor} \\ 
 \pause
-Steigende Flanke & 2 & Publikum? & ? \\
+Steigend/Fallend & 2 & 8? Publikum? & ? \\
 \pause
-Wakeup-Timer & 1 & Publikum? & ? \\
+Wakeup-Timer & 2 & beliebig viele & ? \\
 \end{tabular} 
 
 
