--- a/slides/MakerWorld2014/include/20_arduino_vs_rasppi.tex
+++ b/slides/MakerWorld2014/include/20_arduino_vs_rasppi.tex
@@ -80,11 +80,38 @@ Arduino heisst in diesem Kontext Atmega328P, Raspberry Pi meint das Model B...
 
 \end{frame}
 
+\begin{frame}
+\frametitle{Preise} 
+ 
+ Auf den ersten Blick liegen Arduino und Raspberry Pi preislich eng beieinander. Auf den zweiten Blick:
+ 
+\begin{itemize}
+\item Raspberry Pi: 35 bis 40 \euro
+\pause
+\item Arduino Uno oder Zero: 25 bis 30 \euro
+\pause
+\item Arduino Pro Mini (Sparkfun oder Watterott): 10 \euro
+\pause
+\item Arduino Pro Mini (China-Klon): 3 bis 4 \euro
+\pause
+\item Atmega328P im DIL28-Gehäuse: 3 bis 5 \euro
+\end{itemize}
+
+\end{frame}
+
 \subsection{Einsatzbereiche}
 
 \begin{frame}
 \frametitle{Arduino} 
+\begin{itemize}
+\item \emph{Energiesparende} Sensoren oder Aktoren: Jahrelangerbetrieb auf zwei AAA-Zellen möglich
+\item \emph{Billige} Sensoren: Totalverlust ist zu verschmerzen
+\item \emph{Billige} Peripherie: Der integrierte ADC erlaubt den Anschluss von Thermistoren statt One-Wire-Temperatursensoren
+\item \emph{einfache} Sensoren und Aktoren: auch größere Stückzahlen (Sensornetze, Kunstprojekte) lassen sich mit wenigen Bauteilen schnell fertigen
+\end{itemize}
 \end{frame}
+
+
 
 \begin{frame}
 \frametitle{Raspberry Pi} 
