--- a/slides/MakerWorld2014/raspberrypijam.tex
+++ b/slides/MakerWorld2014/raspberrypijam.tex
@@ -8,6 +8,7 @@
 %\usepackage[german]{babel}
 % \usepackage[iso-8859-1]{inputenc}
 \usepackage[latin9]{inputenc}
+\usepackage{eurosym}
 \setbeamertemplate{navigation symbols}{}
 \usetheme{Warsaw}
 
