--- a/slides/MakerWorld2014/include/20_arduino_vs_rasppi.tex
+++ b/slides/MakerWorld2014/include/20_arduino_vs_rasppi.tex
@@ -104,15 +104,19 @@ Arduino heisst in diesem Kontext Atmega328P, Raspberry Pi meint das Model B...
 \begin{frame}
 \frametitle{Arduino} 
 \begin{itemize}
-\item \emph{Energiesparende} Sensoren oder Aktoren: Jahrelangerbetrieb auf zwei AAA-Zellen möglich
+\item \emph{Energiesparende} Sensoren oder Aktoren: Jahrelanger Betrieb auf zwei AAA-Zellen möglich
 \item \emph{Billige} Sensoren: Totalverlust ist zu verschmerzen
 \item \emph{Billige} Peripherie: Der integrierte ADC erlaubt den Anschluss von Thermistoren statt One-Wire-Temperatursensoren
 \item \emph{einfache} Sensoren und Aktoren: auch größere Stückzahlen (Sensornetze, Kunstprojekte) lassen sich mit wenigen Bauteilen schnell fertigen
 \end{itemize}
 \end{frame}
 
-
-
 \begin{frame}
 \frametitle{Raspberry Pi} 
+\begin{itemize}
+\item \emph{Billige} Basis für Sensornetze
+\item \emph{Stromsparende} ,,Außenstelle'': Solarbetrieb mit relativ kleinem Panel möglich
+\item \emph{Große} Flexibilität dank ,,normalem'' Linux
+\end{itemize}
+
 \end{frame}
