--- a/slides/MakerWorld2014/include/20_arduino_vs_rasppi.tex
+++ b/slides/MakerWorld2014/include/20_arduino_vs_rasppi.tex
@@ -16,6 +16,8 @@ Sehen wir uns die Unterschiede doch einmal näher an:
 RAM/Variablenspeicher & 2048 & 536870912 & 262144\\
 \pause 
 Festspeicher & 32768 & 8589934592 & 262144 \\
+\pause
+Wortbreite & 8Bit & 32Bit & 4 \\
 \pause 
 ,,Rechenleistung'' (MIPS) &  16 & ~ 1000 & 64 \\
 \end{tabular} 
