--- a/slides/MakerWorld2014/include/20_arduino_vs_rasppi.tex
+++ b/slides/MakerWorld2014/include/20_arduino_vs_rasppi.tex
@@ -163,7 +163,7 @@ So sieht der verlötete Aufbau aus:
 \item diverse Analogsensoren (NTC, resistive Erdfeuchte, Photo-Widerstand...)
 \item hier zusätzlich: RTC
 \item Gesamtkosten: 5 bis 10 Euro \euro
-\item ca. ein Jahr Laufzeit auf 3xAA bei Optimierung \euro
+\item ca. ein Jahr Laufzeit auf 3xAA bei Optimierung
 \end{itemize}
 \end{frame}
 
