--- a/slides/MakerWorld2014/raspberrypijam.tex
+++ b/slides/MakerWorld2014/raspberrypijam.tex
@@ -14,7 +14,7 @@
 
 \beamersetuncovermixins{\opaqueness<1>{25}}{\opaqueness<2->{15}}
 \begin{document}
-\title{Mir genügt ein Arduino! Microcontroller statt Prozessor}  
+\title{Der Arduino reicht mir aus: Microcontroller statt Microprocessor}  
 \author{Mattias Schlenker}
 \date{28. Juni 2014} 
 
