--- a/slides/MakerWorld2014/include/80_gemeinsam_stark.tex
+++ b/slides/MakerWorld2014/include/80_gemeinsam_stark.tex
@@ -1,6 +1,40 @@
 \section{Gemeinsam stark!}
 
 \subsection{Raspberry Pi mit Arduino huckepack}
+
+\begin{frame}
+\frametitle{Das Problem}
+
+Raspberry Pi ist billig und leistungsstark, aber:
+\newline
+
+\begin{itemize}
+\item Viele Bibliotheken nur für Arduino erhältlich
+\item Hoher Aufwand, Bibliotheken und Protokolle zu portieren
+\item Keine analogen Ports
+\end{itemize}
+
+
+\begin{frame}
+\frametitle{Die Lösung}
+
+Wir kombinieren einfach Raspberry Pi und Arduino:
+\newline
+
+\begin{center}
+\textbf{Best of both worlds!}
+\end{center}
+
+\begin{itemize}
+\item Alle Arduino-Bibliotheken nutzbar
+\item GPIO des Raspberry bleibt erhalten
+\item Weniger als 10 Euro Investition
+\end{itemize}
+
+
+
+\end{frame}
+
 \subsection{Raspberry Pi als Zentrale}
 
 \begin{frame} 
