--- a/slides/MakerWorld2014/include/50_arduino_zukunft.tex
+++ b/slides/MakerWorld2014/include/50_arduino_zukunft.tex
@@ -183,12 +183,12 @@ Daraus ergeben sich Kompatibilitätsprobleme, beispielsweise wenn Code von einem 
 Kann der ARM-Kern die Fragmentierung stoppen?
 
 \begin{itemize} 
-\item Kurzfristige Ablösung der 32u4 basierten Controller durch ARM
+\item Ablösung der 32u4 basierten Controller durch ARM
 \item Fokus der Entwickler schnell auf ARM?
-\item Atmega328P wird noch eine Weile bleiben - weil im DIL-Package erhältlich
-\item Andere Controllerhersteller außer Atmega werden zu Arduino stoßen (Infineon?)
+\item Atmega328P wird noch eine Weile bleiben (DIL-Package!)
+\item Andere Controllerhersteller werden zu Arduino stoßen 
 \item Billige Klone im Mini-Format machen Verlust der DILs wett
-\item Arduino (im Sinne von Softwareplattform) wird offener und emanzipiert sich von Atmel
+\item Arduino wird offener und emanzipiert sich von Atmel
 \end{itemize}
 \end{frame}
 
