--- a/slides/MakerWorld2014/include/99_ende.tex
+++ b/slides/MakerWorld2014/include/99_ende.tex
@@ -1,5 +1,34 @@
-\section{Abspann} 
+\section{Fazit} 
 
 \begin{frame} 
-Without title somethink is missing. 
+\frametitle{Äpfel mit Birnen vergleichen lohnt nicht!}
+\begin{itemize}
+\item Verschiedene Tools für verschiedene Zwecke
+\item Kenntnisse beider Tools helfen, das richtige auszuwählen
+\item Wer intensiv bastelt, muss kombinieren
+\item Konvergenz verwirrt gelegentlich  - leider auch die Hersteller (siehe Galileo!)
+\item Kommt rüber auf die andere Seite!
+\end{itemize}
+\end{frame}
+
+\begin{frame} 
+\frametitle{Revolutionkunde}
+\begin{itemize}
+\item Arduino: 2004 - die Microcontroller-Revolution
+\item Raspberry Pi: 2012 - die Microprocessor-Revolution + Popularisierung von Linux
+\end{itemize}
+
+\begin{center}
+\textbf{Beides zusammen: Die Maker-Revolution!}
+\end{center}
+\end{frame}
+
+\begin{frame} 
+\frametitle{Danke für die Aufmerksamkeit}
+\begin{itemize}
+\item Mattias Schlenker - \texttt{ms@mattiasschlenker.de}
+\item Fork me on Github! \texttt{https://github.com/mschlenker}
+\item Webseite \texttt{https://www.arduino-hausautomation.de/}
+\item Google+ \texttt{https://plus.google.com/+MattiasSchlenker1}
+\end{itemize}
 \end{frame}
