--- a/slides/MakerWorld2014/include/50_arduino_zukunft.tex
+++ b/slides/MakerWorld2014/include/50_arduino_zukunft.tex
@@ -1,5 +1,12 @@
 \section{Die Arduino-Zukunft}
 
+\begin{frame}
+\frametitle{Quo Vadis, Arduino?}
+
+Die Arduino-Familie fächerte in den letzten Jahren immer mehr auf. Ein deutlicher Trend sind Platinen, die wie der Raspberry unter Linux laufen? Werden sie dem RPi gefährlich? Entfremdet sich Arduino von seiner ursprünglichen Zielgruppe?
+
+\end{frame}
+
 \subsection{,,Starke'' Arduinos mit Linux}
 
 \begin{frame}
